// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourcesAxisViewModel when Horizontal should return correct tickInfo 1`] = `
Array [
  Object {
    "label": "Series 1",
    "transform": "translate(0, 58.333333333333336)",
  },
  Object {
    "label": "Series 2",
    "transform": "translate(0, 175)",
  },
  Object {
    "label": "Series 3",
    "transform": "translate(0, 291.6666666666667)",
  },
]
`;

exports[`ResourcesAxisViewModel when Vertical should return correct tickInfo 1`] = `
Array [
  Object {
    "label": "Series 1",
    "transform": "translate(41.666666666666664, 0)",
  },
  Object {
    "label": "Series 2",
    "transform": "translate(125, 0)",
  },
  Object {
    "label": "Series 3",
    "transform": "translate(208.33333333333331, 0)",
  },
]
`;
